# igus_6dof_robotic_arm

./: README.md
igus_6dof_controller/: CMakeLists.txt  package.xml
igus_6dof_controller/launch/: controller.launch.py
igus_6dof_moveit/: CMakeLists.txt  package.xml
igus_6dof_moveit/config/: igus_controller.yaml  igus_rebel_6dof.macro.xacro  igus_rebel_6dof.srdf  igus_rebel_6dof.srdf.xacro  igus_rebel_6dof.urdf.xacro  igus_rebel_6dof_00.description.xacro  igus_rebel_6dof_01.description.xacro  igus_rebel_6dof_01.ros2_control.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rebel.ros2_control.xacro
igus_6dof_moveit/launch/: filetest.launch.py  moveit.launch.py  old.launch.py
igus_6dof_moveit_interface/: CMakeLists.txt  package.xml
igus_6dof_moveit_interface/src/: forward_path_planner.cpp  inverse_path_solver.cpp
irc_ros_description/: CMakeLists.txt  package.xml
irc_ros_description/config/: igus_controller.yaml
irc_ros_description/launch/: bringup.launch.py  display.launch.py  gazebo.launch.py
irc_ros_description/urdf/: igus_rebel_6dof.urdf.xacro
irc_ros_description/urdf/modules/: rebel.ros2_control.xacro
irc_ros_description/urdf/robots/: igus_rebel_6dof.macro.xacro  igus_rebel_6dof_01.ros2_control.xacro  igus_rebel_6dof_gazebo.xacro
